# linuxmuster-schulkonsole

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.buildpackage  README.svn  README.templatemanipulation_with_ex  TODO  aclocal.m4  build-sk  buildpackage.sh  cmd.ex  common.mk  configure  configure.ac  make-messages  svn-commit.2.tmp  svn-commit.tmp
Schulkonsole/: .gitignore  Config.pm  Config.pm.in  DB.pm  Debconf.pm  File.php  Files.pm  Firewall.pm  Gettext.pm  Horde.pm  Info.pm  Lesson.pm  LessonSession.pm  Linbo.pm  Makefile  Printer.pm  Radius.pm  Repair.pm  Session.pm  Session.pm.in  Sophomorix.pm  SophomorixConfig.pm  SophomorixQuotas.pm  TeachIn.pm  Template.php  Wrapper.pm  horde-mail.php
css/: Makefile.am  Makefile.in  linuxmuster.css  linuxmuster_IE.css  schulkonsole.css  schulkonsole_restricted.css  schulkonsole_restricted_IE.css
debian/: changelog  control  copyright  dirs  linuxmuster-schulkonsole-templates-base.install  linuxmuster-schulkonsole-wrapper.install  linuxmuster-schulkonsole-wrapper.lintian  linuxmuster-schulkonsole.cron.daily  linuxmuster-schulkonsole.dirs  linuxmuster-schulkonsole.install  linuxmuster-schulkonsole.links  linuxmuster-schulkonsole.lintian  linuxmuster-schulkonsole.postinst  linuxmuster-schulkonsole.postrm  postrm  rules  schulkonsole-wrapper.install  schulkonsole-wrapper.lintian  schulkonsole-wrapper.postinst  schulkonsole.install  schulkonsole.links  schulkonsole.lintian  schulkonsole.postinst  schulkonsole.prerm
doc/: praesentation-2012.odp
img/: Makefile.am  Makefile.in
jquery/: jMenu.jquery.js  jquery-ui.css  jquery-ui.js  jquery-ui.min.css  jquery-ui.min.js  jquery-ui.structure.min.css  jquery-ui.theme.min.css  jquery.isloading.js  settings_repair.js
lib/: Makefile.am  Makefile.in
lib/Schulkonsole/: Collab.pm  Config.pm.in  Cyrus.pm  DB.pm  Debconf.pm  Encode.pm  Error.pm  Files.pm  Firewall.pm  Horde.pm  Info.pm  Lesson.pm  LessonSession.pm  Linbo.pm  Makefile.am  Makefile.in  Muster.pm  OVPN.pm  Printer.pm  Radius.pm  Room.pm  RoomSession.pm  Session.php  Session.pm.in  Sophomorix.pm  SophomorixQuotas.pm  TeachIn.pm  Template.pm  WWW.pm  Wrapper.php  Wrapper.pm  horde-mail.php
lib/Schulkonsole/Error/: Cyrus.pm  CyrusError.pm  Debconf.pm  DebconfError.pm  Error.pm  ExternalError.pm  Files.pm  Firewall.pm  FirewallError.pm  Horde.pm  HordeError.pm  Linbo.pm  LinboError.pm  MusterError.pm  OVPN.pm  OVPNError.pm  Printer.pm  PrinterError.pm  Radius.pm  RadiusError.pm  Sophomorix.pm  SophomorixError.pm  User.pm  UserError.pm
linbo/: Makefile.in
linuxmuster/: wlan_defaults
m4/: ChangeLog
menus.d/: menu-01  submenu-class-01  submenu-linbo-01  submenu-project-01  submenu-quotas-01  submenu-repair-01  submenu-rooms-99  submenu-settings-01  subsubmenu-room_test-01
permissions.d/: all-pages-schulkonsole  all-programs-schulkonsole  domadmins-pages-schulkonsole  domadmins-programs-schulkonsole  students-pages-schulkonsole  teachers-pages-schulkonsole  teachers-programs-schulkonsole
po/: .gitignore  ChangeLog  LINGUAS  Makefile  Makefile.am  Makefile.in.in  Makevars  POTFILES.in  POTFILES.perl.in  POTFILES.tt.in  README.multilang  de.po  en.po  schulkonsole.pot
sbin/: linuxmuster-wlan-reset  wlan_on_off
scripts/: make-menus.sh  update-permissions.sh
shtml/: Makefile.am  Makefile.in  class.shtml  class.tt  class_collect.shtml  class_collect.tt  class_db.shtml  class_handout.shtml  class_handout.tt  class_handoutcopy.shtml  class_handoutcopy.tt  class_lesson.tt  class_list.shtml  class_list.tt  class_passwords.shtml  class_passwords.tt  class_revision_control.shtml  class_shares.shtml  class_shares.tt  class_www.shtml  css.inc.tt  css.shtml.inc  dialog.shtml.inc  example.shtml  example.tt  footer.inc.tt  footer.shtml.inc  group_lesson.shtml  header.inc.tt  header.shtml.inc  hosts.shtml  hosts.tt  linbo.shtml  linbo.tt  linbo_edit.shtml  linbo_edit.tt  linbo_edit_data.inc.tt  linbo_edit_global.inc.tt  linbo_edit_oss.inc.tt  linbo_edit_oss.tt  (+136 more)
src/: Makefile.am  Makefile.in
src/cgi-bin/: Makefile.am  Makefile.in  class  class.in  class_collect  class_collect.in  class_db.in  class_handout  class_handout.in  class_handoutcopy  class_handoutcopy.in  class_lesson  class_lesson.in  class_list  class_list.in  class_list.in.printquota  class_list.printquota  class_passwords  class_passwords.in  class_revision_control.in  class_shares  class_shares.in  class_www.in  config.php  config.php.in  druckquotas  druckquotas_classes  druckquotas_others  druckquotas_printers  druckquotas_projects  druckquotas_settings  druckquotas_students  druckquotas_teachers  example  example.in  group_lesson.in  hosts  hosts.in  linbo  linbo.in  (+128 more)
src/util/: .gitignore  Makefile  Makefile.am  Makefile.in  cyrquota.pl  quota.pl  wrapper-collab.c  wrapper-collab.pl.in  wrapper-cyrus.c  wrapper-cyrus.pl  wrapper-debconf.c  wrapper-debconf.pl  wrapper-debconf.pl.in  wrapper-files.c  wrapper-files.pl  wrapper-files.pl.in  wrapper-firewall.c  wrapper-firewall.pl  wrapper-firewall.pl.in  wrapper-horde.c  wrapper-horde.pl  wrapper-linbo.c  wrapper-linbo.pl  wrapper-linbo.pl.in  wrapper-muster.c  wrapper-muster.pl  wrapper-ovpn.c  wrapper-ovpn.pl  wrapper-ovpn.pl.in  wrapper-printer.c  wrapper-printer.pl  wrapper-printer.pl.in  wrapper-radius.c  wrapper-radius.pl  wrapper-radius.pl.in  wrapper-repair.c  wrapper-repair.pl  wrapper-sophomorix.c  wrapper-sophomorix.pl  wrapper-sophomorix.pl.in  (+1 more)
tt/: busy.inc.tt  class.tt  class_collect.tt  class_handout.tt  class_handoutcopy.tt  class_lesson.tt  class_list.tt  class_passwords.tt  class_shares.tt  dialog.inc.tt  hosts.tt  linbo_edit.tt  linbo_edit_data.inc.tt  linbo_edit_global.inc.tt  linbo_edit_oss.inc.tt  linbo_grubedit.tt  linbo_images.tt  linbo_menuedit.tt  linbo_new.tt  linbo_postsyncedit.tt  linbo_pxeedit.tt  linbo_regpatchedit.tt  linbo_remote.tt  login.tt  logout.tt  muster.tt  myclass_handedout.tt  myclass_handedoutcopy.tt  myclass_tocollect.tt  myprojects.tt  myprojects_handedout.tt  myprojects_handedoutcopy.tt  myprojects_tocollect.tt  myroom.tt  myroom_handedoutcopy.tt  (+50 more)
(+59 files in other folders)
