AC_INIT([schulkonsole], [0.11.3])
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE

AM_GNU_GETTEXT([external])

AC_CONFIG_FILES([Makefile
	src/Makefile
	src/cgi-bin/Makefile
	src/util/Makefile
	shtml/Makefile
	lib/Makefile
	lib/Schulkonsole/Makefile
	bin/Makefile
	linbo/Makefile
	linbo/templates/Makefile
	linbo/templates/os/Makefile
	linbo/templates/part/Makefile
	po/Makefile.in])
AC_OUTPUT

