imgdir = $(pkgdatadir)/img
dist_img_DATA = bw.jpg lmz.jpg MOII.png support-netz2.jpg \
	punkt-h.png punkt-v.png \
	info.png info-rot.png info-gruen.png \
	file.gif folder.gif \
	nava.png navaend.png navasep.png \
	navahover.png navaendhover.png navasephover.png \
	navacurrent.png navaendcurrent.png navasepcurrent.png \
	nava2current.png nava2endcurrent.png nava2sepcurrent.png \
	nav.png navend.png navsep.png
