pkglibexecdir = $(libexecdir)/@PACKAGE@/cgi-bin

pkglibexec_SCRIPTS = example start logout \
	room room_lesson room_shares room_handout room_collect room_test \
	room_test_handout room_test_password room_test_collect \
	room_test_end \
	class class_list class_passwords class_collect \
	class_handoutcopy class_handout class_shares \
	class_lesson \
	project project_members project_addmembers \
	project_handoutcopy project_handout project_collect \
	project_shares project_lesson project_passwords \
	settings settings_program settings_users settings_classs \
	settings_projects \
	user user_students user_teachers user_extra \
	user_teacherpasswords user_print \
	user_check user_teachin user_commit user_reports \
	rooms rooms_classrooms \
	printers printers_edit hosts \
	quotas \
	quotas_teachers quotas_classes quotas_projects quotas_others \
	linbo linbo_edit linbo_new linbo_regpatchedit \
	linbo_images linbo_grubedit linbo_postsyncedit linbo_remote \
	myclass myclass_handedout myclass_handedoutcopy myclass_tocollect \
	myprojects myprojects_handedout myprojects_handedoutcopy myprojects_tocollect \
	myroom myroom_handedoutcopy myroom_tocollect \
	config.php
